Adjust .gitignore and unstage pigs.txt && SortApplicationPractice.java

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ SortingApplicationPractice.java
 Pig.java
 PersonHeightComparator.java
 Person.java
+
+# sample files from bottcamp exercises
+pigs.txt
